Removed unused files + added support for typeahead